--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Prueba Familia Naranja</title>
+	<title>Prueba Walmart</title>
 </head>
 <body>
 	<script type="text/javascript">
