--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-	<title>Prueba Familia Naranja</title>
+	<title>Prueba Walmart</title>
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 	<script type="text/javascript">
 	(function() {
